# docs

./: .ci.patch  .gitignore  Authentication-Quickstart-Guide.md  Bid-Model-API-Guidelines.md  Campaign-API-Guidelines.md  Conversion-API-Guidelines.md  Finance-Guidelines.md  Index.md  Insights-API-Guidelines.md  Inventory-API-Guide.md  Jenkinsfile  LICENSE  Master-API-Guidelines.md  Matched Audience Upload API Quickstart Guide.md  Matched-Audience-Upload-API-Quickstart-Guide.md  ReadMe.md  Reporting API Quickstart Guide.md  Reporting-API-Quickstart-Guide.md  Reports-API-Guidelines.md  Schedule-Report-API-Quickstart-Guide.md  Upload-Creative-and-Create-a-Campaign-API-Quickstart-Guide.md  User-Profile-Guidelines.md  Workspace-Guidelines.md  babel.config.js  bid-model-api-guidelines.md  docusaurus.config.js  index.md  linkinator.config.json  master-guidelines.md  package-lock.json  package.json  sidebars.js  user-profile-guidelines.md
.docusaurus/: client-manifest.json  client-modules.js  docusaurus.config.mjs  globalData.json  registry.js  routes.js  routesChunkNames.json
.github/workflows/: deploy.yml  test-deploy.yml
api-server/: .env.example  README.md  package-lock.json  package.json
api-server/src/: index.js
cpp-backend/: CMakeLists.txt  KNOWLEDGE_LAYERS.md  README.md  run-server.sh  start-servers.sh  test-results.txt
cpp-backend/include/: ApiMetadataRegistry.h  DocAssistant.h  KnowledgeResolver.h
cpp-backend/include/handlers/: chat_handler.hpp  health_handler.hpp
cpp-backend/include/inference/: llama_wrapper.hpp
cpp-backend/include/server/: http_server.hpp
cpp-backend/include/utils/: config.hpp
cpp-backend/knowledge/: navigation.yaml  skeleton.yaml  taxonomy.yaml
cpp-backend/src/: ApiMetadataRegistry.cpp  DocAssistant.cpp  KnowledgeResolver.cpp  doc_assistant_server.cpp  main.cpp
cpp-backend/tests/: test_knowledge_resolver.cpp
cpp-backend/tools/: build-knowledge.js  extract-headings.js  test-intents.js
docs/: Authorization-Guide.md  index.md  intro.md  intro.mdx
docs/Getting Started/: API-Pagination-Guide.mdx  Before-You-Begin.mdx  Error-Handling.mdx  Platform-overview.mdx  REST-API-Reference.mdx  Request-Methods.mdx  Typescript-Prerequisites.mdx  index.mdx
docs/Guidelines/: API-JSON-File.mdx  Assets-API-Guidelines.mdx  Audience-API-Guidelines.mdx  Bid-Model-API-Guidelines.mdx  Campaign-API-Guidelines.mdx  Conversion-API-Guidelines.mdx  Creative-API-Guidelines.mdx  Dashboard-API-Guidelines.mdx  Finance-Guidelines.mdx  Insights-API-Guidelines.mdx  Inventory-API-Guide.mdx  Master-API-Guidelines.mdx  Planner-API-Guidelines.mdx  Reports-API-Guidelines.mdx  User-Profile-Guidelines.mdx  Workspace-Guidelines.mdx  index.mdx
docs/Healthcare Vertical/: Audience-Healthcare.mdx  Finance.mdx  Insights-PLD.mdx  Planner.mdx  index.mdx
docs/MCP/: index.mdx
docs/MCP Server/: Getting-Started.mdx  index.mdx
docs/Migration Guides/: index.mdx
docs/Political Vertical/: Audience-Segments.mdx  Finance.mdx  Insights-VLD.mdx  index.mdx
docs/Quickstart Guides/: Authentication-Quickstart-Guide.md  Authentication-Quickstart-Guide.mdx  Bid-Model-Quickstart.mdx  Contextual-Audience-Quickstart.mdx  Conversion-Quickstart.mdx  Create-a-Campaign-Quickstart.mdx  Insights-Quickstart.mdx  Inventory-Quickstart.mdx  Matched-Audience-Upload-API-Quickstart-Guide.md  Matched-Audience-Upload-API-Quickstart-Guide.mdx  (+8 more)
scripts/: check-external-links.sh  check-soft404-help.sh
static/: CNAME
(+364 files in other folders)
